# ferret-api-rs

./: .gitignore  Cargo.toml  README.md  database.db
src/: database.rs  main.rs  util.rs
src/routes/: get.rs  post.rs
