[package]
name = "ferret-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
actix-files = "0.6.2"
actix-multipart = "0.6.0"
rand = "0.8.5"
actix-cors = "0.6.4"

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng"]

[dependencies.serde]
version = "1.0"
features = ["derive"]